--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Core dependencies
+streamlit>=1.28.0
 pandas>=1.3.0
 numpy>=1.21.0
 scikit-learn>=1.0.0
@@ -8,6 +9,9 @@ xgboost>=1.5.0
 # Visualization
 matplotlib>=3.4.0
 seaborn>=0.11.0
+
+# Model persistence
+joblib>=1.3.0
 
 # Optional development dependencies
 # pytest>=7.0.0
